--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "C:/Users/crist/Programacion/Platzi/Reactjs/curso-react-intro-main/curso-react-intro-main/build/"
 }
