--- a/package.json
+++ b/package.json
@@ -29,5 +29,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "C:/Users/crist/Programacion/Platzi/Reactjs/curso-react-intro-main/curso-react-intro-main/build/"
+  "homepage": "https://cris-guardia.github.io/create-todos"
 }
